# simple_mariadb

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: common.cmake  mariadb.cmake  mariadbc.cmake  mariadbcpp.cmake  simple_config.cmake
include/simple_mariadb/: client.h  config.h
src/: client.cpp  config.cpp
tests/: CMakeLists.txt  test_client.cpp  test_config.cpp
